Fix mobile imageviewer overflow

--- a/web/src/ImageViewer.css
+++ b/web/src/ImageViewer.css
@@ -4,5 +4,6 @@
 
 .imageViewer img {
     max-height: 72vh;
+    max-width: 98vw;
     image-orientation: from-image;
 }
